--- a/pjm.cabal
+++ b/pjm.cabal
@@ -17,6 +17,9 @@ library
   hs-source-dirs:       src
   exposed-modules:      Lib
   build-depends:        base >= 4.7 && < 5
+                      , graphviz
+                      , rdf4h
+                      , text
   default-language:     Haskell2010
 
 executable pjm-exe
