--- a/stack.yaml
+++ b/stack.yaml
@@ -8,10 +8,14 @@ packages:
 - '.'
 
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
-extra-deps: []
+extra-deps: [ "rdf4h-1.3.6" ]
 
 # Override default flag values for local packages and extra-deps
-flags: {}
+flags:
+  rdf4h:
+    network-uri: true
+    small_base: true
+
 
 # Extra package databases containing global packages
 extra-package-dbs: []
